[gd_scene load_steps=9 format=3 uid="uid://clwb00tc8ogtr"]

[ext_resource type="Script" path="res://addons/panku_console/modules/native_logger/log_overlay.gd" id="1_638j8"]
[ext_resource type="Texture2D" uid="uid://blg5st202jqgr" path="res://addons/panku_console/modules/native_logger/log_overlay_bg.tres" id="1_yygbn"]

[sub_resource type="SystemFont" id="SystemFont_ihar8"]
font_names = PackedStringArray("Consolas")

[sub_resource type="SystemFont" id="SystemFont_bhsel"]
font_names = PackedStringArray("Consolas")
font_italic = true
font_weight = 999

[sub_resource type="SystemFont" id="SystemFont_gs2b6"]
font_names = PackedStringArray("Consolas")
font_italic = true

[sub_resource type="SystemFont" id="SystemFont_8l0k6"]
font_names = PackedStringArray("Consolas")

[sub_resource type="Theme" id="Theme_drgcl"]
default_font_size = 16
RichTextLabel/fonts/bold_font = SubResource("SystemFont_ihar8")
RichTextLabel/fonts/bold_italics_font = SubResource("SystemFont_bhsel")
RichTextLabel/fonts/italics_font = SubResource("SystemFont_gs2b6")
RichTextLabel/fonts/mono_font = SubResource("SystemFont_ihar8")
RichTextLabel/fonts/normal_font = SubResource("SystemFont_8l0k6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ne3nk"]
texture = ExtResource("1_yygbn")

[node name="LogOverlay" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_drgcl")
theme_override_styles/panel = SubResource("StyleBoxTexture_ne3nk")
script = ExtResource("1_638j8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="LogOverlayText" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/line_separation = 0
bbcode_enabled = true
text = "
	   normal
	   [b]bold[/b]
	   [i]italics[/i]
	   [b][i]bold italics[/i][/b]"
scroll_active = false
scroll_following = true
shortcut_keys_enabled = false
threaded = true

[node name="LogOverlayLatest" type="RichTextLabel" parent="VBoxContainer/LogOverlayText"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 3.0
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
scroll_following = true
shortcut_keys_enabled = false
threaded = true

[node name="BottomMargin" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
mouse_filter = 2
